<resources>
    <string name="app_name">JFinal社区</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_qr_code">二维码格式错误</string>
    <string name="home_page">首页</string>
    <string name="error_network">网络连接不可用</string>
    <string name="test_title">测试标题</string>
    <string name="test_view">270浏览</string>
    <string name="test_reply">30回复</string>
    <string name="test_content">这是测试内容</string>
    <string name="test_time">2015年9月3日</string>
    <string name="failure_network">网络连接失败</string>
    <string name="text_load_more">正在加载中</string>

    <string name="text_load_again">重新加载</string>
    <string name="text_last_page">到最后一页了，没有内容了</string>
    <string name="title_topic_detail">主题详情</string>
    <string name="test_user">测试用户</string>
    <string name="text_load_failure">加载失败</string>
    <string name="test_sign">做一名优秀的程序员</string>
    <string name="text_empty">没有数据</string>
    <string name="test_action">回复了你</string>
    <string name="test_notification">已读</string>
    <string name="my_topics">我的主题</string>
    <string name="my_collects">我的收藏</string>
    <string name="my_notification">我的提醒</string>
    <string name="please_login">请先登陆后再进行操作</string>
    <string name="confirm">确认</string>
    <string name="notice">提醒</string>
    <string name="no_login">您还没有登陆，请登陆后重试</string>
    <string name="loading_userdate">正在获取用户信息。。。</string>
    <string name="failure_userdata">获取用户信息失败</string>
    <string name="title_user">我的资料</string>
    <string name="text_collect">收藏</string>
    <string name="text_collect_cancel">取消收藏</string>
    <string name="success_collect_cancel">取消收藏成功</string>
    <string name="success_collect">收藏成功</string>
    <string name="hint_reply">发表评论</string>
    <string name="desc_send_button">发送按钮</string>
    <string name="failure_create_reply">发表评论失败</string>
    <string name="no_reply">还没有人回复</string>
    <string name="hint_content">请输入内容</string>
    <string name="hint_title">标题</string>
    <string name="done">完成</string>
    <string name="success_create_topic">话题发表成功</string>
    <string name="error_sections_null">分类为空</string>
    <string name="success_create_reply">发表评论成功</string>
    <string name="title_create_topic">新建主题</string>
    <string name="title_create_reply">发表回复</string>
    <string name="click_login">点击登录</string>
    <string name="failure_get_user">获取用户信息失败</string>
    <string name="loading_data">数据加载中。。。</string>
    <string name="title_login">扫描二维码登录</string>
    <string name="menu_option">操作</string>
    <string name="menu_about">关于</string>
    <string name="menu_setting">设置</string>
    <string name="title_alert">警告</string>
    <string name="cancel">取消</string>
    <string name="alert_clear_cache">你确定要清除缓存吗？（包括登陆信息）</string>
    <string name="content_about">by zzhoujay</string>
    <string name="menu_clear">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="check_in">签到</string>
    <string name="check_in_loading">签到中</string>
    <string name="success_check_in">签到成功</string>
    <string name="check_in_done">已签到</string>
    <string name="loading_create_topic">发布中</string>
    <string name="loading_create_reply">发表中</string>
    <string name="failure_get_section">获取分类信息失败</string>
    <string name="tip">提示</string>
    <string name="reload">重新加载</string>
</resources>
