<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:clickable="true"
    android:foreground="?android:selectableItemBackground"
    android:padding="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/test_user"
            android:textColor="@color/material_lightBlue_500"
            android:textSize="@dimen/material_body" />

        <TextView
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/name"
            android:layout_toRightOf="@id/name"
            android:text="@string/test_action"
            android:textColor="@color/material_grey_800"
            android:textSize="@dimen/material_body" />

        <TextView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/action"
            android:layout_toRightOf="@id/action"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/test_title"
            android:textColor="@color/material_grey_600"
            android:textSize="@dimen/material_body" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_margin="6dp"
            android:text="@string/test_time"
            android:textColor="@color/material_grey_500"
            android:textSize="@dimen/material_caption" />

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/name"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/test_notification"
            android:textColor="@color/material_grey_400"
            android:textSize="@dimen/material_caption" />

    </RelativeLayout>

</android.support.v7.widget.CardView>