<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:clickable="true"
    android:foreground="?android:selectableItemBackground"
    android:padding="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_iconfont_tupian" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/icon"
            android:layout_toRightOf="@id/icon"
            android:maxLines="2"
            android:text="@string/test_title"
            android:textColor="@color/material_grey_700"
            android:textSize="@dimen/material_sub_head" />


        <TextView
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:text="@string/test_view"
            android:textColor="@color/material_grey_500"
            android:textSize="@dimen/material_caption" />

        <TextView
            android:id="@+id/reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@id/view"
            android:layout_toStartOf="@id/view"
            android:text="@string/test_reply"
            android:textColor="@color/material_grey_500"
            android:textSize="@dimen/material_caption" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/title"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@id/title"
            android:layout_margin="5dp"
            android:text="@string/test_time"
            android:textColor="@color/material_grey_500"
            android:textSize="@dimen/material_caption" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/view"
            android:layout_alignLeft="@id/title"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@id/title"
            android:layout_below="@id/title"
            android:layout_margin="5dp"
            android:maxLines="2"
            android:text="@string/test_content"
            android:textColor="@color/material_grey_500"
            android:textSize="@dimen/material_body" />

    </RelativeLayout>

</android.support.v7.widget.CardView>