<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/material_white">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_iconfont_tupian" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_turned_in_not_white_48px"
            android:visibility="visible" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/icon"
            android:layout_toLeftOf="@id/collect"
            android:layout_toRightOf="@id/icon"
            android:layout_toStartOf="@id/collect"
            android:text="@string/test_user"
            android:textColor="@color/material_grey_600"
            android:textSize="@dimen/material_body" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/name"
            android:layout_alignStart="@id/name"
            android:layout_below="@id/name"
            android:layout_toLeftOf="@id/collect"
            android:layout_toStartOf="@id/collect"
            android:text="@string/test_time"
            android:textColor="@color/material_grey_500"
            android:textSize="@dimen/material_caption" />


    </RelativeLayout>

    <View
        android:id="@+id/gap1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/head"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/material_grey_300" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gap1"
        android:layout_margin="10dp"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/test_title"
        android:textColor="@color/material_grey_900"
        android:textSize="@dimen/material_title" />


    <zhou.app.jfbs.ui.weiget.RichText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_margin="10dp"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/test_content"
        android:textColor="@color/material_grey_800"
        android:textSize="@dimen/material_body" />

    <TextView
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/test_view"
        android:textColor="@color/material_grey_500"
        android:textSize="@dimen/material_caption" />

    <TextView
        android:id="@+id/reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/test_reply"
        android:textColor="@color/material_grey_500"
        android:textSize="@dimen/material_caption" />

    <View
        android:id="@+id/gap3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/view"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/material_grey_300" />

</RelativeLayout>