<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:clickable="true"
    android:foreground="?android:selectableItemBackground"
    android:padding="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_iconfont_tupian" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/icon"
            android:layout_toRightOf="@id/icon"
            android:text="@string/test_title"
            android:textColor="@color/material_grey_600"
            android:textSize="@dimen/material_body" />

        <zhou.app.jfbs.ui.weiget.RichText
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/name"
            android:padding="4dp"
            android:layout_alignStart="@id/name"
            android:layout_below="@id/name"
            android:layout_margin="4dp"
            android:text="@string/test_content"
            android:textColor="@color/material_grey_700"
            android:textSize="@dimen/material_caption" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:text="@string/test_time"
            android:textColor="@color/material_grey_600"
            android:textSize="@dimen/material_caption" />
    </RelativeLayout>

</android.support.v7.widget.CardView>